--- a/Views/ClientAccount/Reservations.cshtml
+++ b/Views/ClientAccount/Reservations.cshtml
@@ -2,6 +2,13 @@
 @{
     ViewData["Title"] = "Mes réservations";
 }
+<link rel="stylesheet" href="~/css/ElegantBackground.css">
+
+<div class="elegant-background">
+    <div class="curved-shape shape-1"></div>
+    <div class="curved-shape shape-2"></div>
+    <div class="curved-shape shape-3"></div>
+</div>
 
 @{
     var isNl = (System.Globalization.CultureInfo.CurrentUICulture?.TwoLetterISOLanguageName?.ToLower() ?? "fr") == "nl";
@@ -25,7 +32,7 @@
     var amountSuffix = isNl ? "€" : "€";
 }
 
-<div class="container" style="margin-top:5cm;">
+<div class="container page-elegant" style="margin-top:5cm;">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h1>@pageTitle</h1>
         <div class="text-end">
