--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -2,12 +2,19 @@
     Layout = "_Layout";
     ViewData["Title"] = "Menu";
 }
+<link rel="stylesheet" href="~/css/ElegantBackground.css">
 <link rel="stylesheet" href="~/css/StyleMenu.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Cormorant+Garamond:wght@300;400;600&display=swap" rel="stylesheet">
 
-<div class="menu-page">
+<div class="elegant-background">
+    <div class="curved-shape shape-1"></div>
+    <div class="curved-shape shape-2"></div>
+    <div class="curved-shape shape-3"></div>
+</div>
+
+<div class="menu-page page-elegant">
     <div class="menu-container">
         <div class="menu-header">
             <h1 class="menu-title">Restaurant Reserva</h1>
