--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,8 +30,8 @@
                         }
                         <li class="nav-item"><a class="nav-link" href="@Url.Action("Menu", "Home")">Menu</a></li>
                         <li class="nav-item"><a class="nav-link" href="/Home/Terms">@(isNlNav ? "Algemene voorwaarden" : "Conditions générales")</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#locations">@(isNlNav ? "Locaties" : "Emplacements")</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="@Url.Action("Index", "Home")#locations">@(isNlNav ? "Locaties" : "Emplacements")</a></li>
+                        <li class="nav-item"><a class="nav-link" href="@Url.Action("Index", "Home")#contact">Contact</a></li>
                     </ul>
                     <div class="d-flex align-items-center">
                         @{
